--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,8 @@ black = "^24.8.0"
 isort = "^5.13.2"
 ruff = "^0.14.2"
 pre-commit = "^4.5.0"
+pytest = "^7.4.0"
+pytest-django = "^4.5.0"
 selenium = "^4.30.0"
 webdriver-manager = "^4.0.2"
 chromedriver-autoinstaller = "^0.6.4"
